--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.0.10",
+    "@vercel/analytics": "^1.4.1",
     "ai": "^4.0.18",
     "next": "15.1.0",
     "react": "^19.0.0",
