--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aideation",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,12 +11,18 @@
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.0.10",
+    "@payloadcms/db-postgres": "^3.7.0",
+    "@payloadcms/next": "^3.7.0",
+    "@payloadcms/richtext-lexical": "^3.7.0",
     "@vercel/analytics": "^1.4.1",
     "ai": "^4.0.18",
+    "graphql": "^16.9.0",
     "next": "15.1.0",
+    "payload": "^3.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-swipeable": "^7.0.2",
+    "sharp": "^0.33.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
