--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/azure": "^1.0.10",
     "@payloadcms/db-postgres": "^3.7.0",
+    "@payloadcms/email-resend": "^3.7.0",
     "@payloadcms/next": "^3.7.0",
     "@payloadcms/richtext-lexical": "^3.7.0",
     "@vercel/analytics": "^1.4.1",
