--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/azure": "^1.0.10",
     "@payloadcms/db-postgres": "^3.7.0",
     "@payloadcms/email-resend": "^3.7.0",
+    "@payloadcms/live-preview-react": "^3.7.0",
     "@payloadcms/next": "^3.7.0",
     "@payloadcms/plugin-form-builder": "^3.7.0",
     "@payloadcms/plugin-nested-docs": "^3.7.0",
@@ -21,15 +22,26 @@
     "@payloadcms/plugin-seo": "^3.7.0",
     "@payloadcms/richtext-lexical": "^3.7.0",
     "@payloadcms/ui": "^3.7.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "@vercel/analytics": "^1.4.1",
     "ai": "^4.0.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.9.0",
+    "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "payload": "^3.7.0",
+    "payload-admin-bar": "^1.0.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "react-swipeable": "^7.0.2",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.5",
     "types": "link:@payloadcms/plugin-seo/types",
     "zod": "^3.24.1"
   },
